--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     text-decoration: none;
     box-sizing: border-box;
     list-style: none;
+    font-family: "DM Sans", sans-serif;
 }
 
 section {
@@ -32,7 +33,6 @@ section {
 }
 
 h1 {
-    font-family: "DM Sans", sans-serif;
     font-size: 42px;
     line-height: 52px;
     letter-spacing: -0.4000000059604645px;
@@ -40,28 +40,23 @@ h1 {
     margin-bottom: 41px;
 }
 
-
-
 h2 {
     color: #1E0E62;
     font-size: 22px;
     line-height: 32px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .card {
- width: 270px;
- height: 326px;
     background-color: #F7F7F8;
-    padding: 34.2px 36px 35px 35px;
+    padding: 34.2px 35px;
     border-radius: 10px;
     margin-top: 25px;
+    max-width: 270px
 }
 
 p {
     font-size: 18px;
     line-height: 28px;
-    font-family: "DM Sans", sans-serif;
     width: 199px;
     margin-top: 11.8px;
     color: #9D9CAC;
@@ -73,18 +68,18 @@ button {
     border: #25DAC5;
     margin-top: 33px;
     padding: 7px 17px;
+    cursor: pointer;
+
 }
 
 .p1 {
     font-size: 18px;
     font-weight: 500;
     line-height: 26px;
-    font-family: "DM Sans", sans-serif;
     color: white;
 }
 
 .t-heading3 {
-    font-family: "DM Sans", sans-serif;
     font-size: 14px;
     line-height: 26px;
     letter-spacing: 2px;
@@ -98,25 +93,22 @@ table {
     height: 373.4px;
     text-align: center;
     border-collapse: collapse;
-  padding: 20px;
-}
-.data{
-    overflow: auto;
 }
 
 .style {
     color: #1E0E62;
     line-height: 26px;
-    font-family: "DM Sans", sans-serif;
 }
-tr{
-border-bottom: 2px solid #EBEAED;
+
+tr {
+    border-bottom: 2px solid #EBEAED;
 }
-.amount{
+
+.amount {
     text-align: right;
 }
-.t-heading1{
-    font-family: "DM Sans", sans-serif;
+
+.t-heading1 {
     font-size: 14px;
     line-height: 26px;
     letter-spacing: 2px;
@@ -124,50 +116,57 @@ border-bottom: 2px solid #EBEAED;
     text-align: left;
     padding-bottom: 14px;
 }
-.e-credit{
+
+.e-credit {
     color: #1E0E62;
     line-height: 26px;
-    font-family: "DM Sans", sans-serif;
     text-align: left;
 }
-.price{
+
+.price {
     color: #1E0E62;
     line-height: 26px;
-    font-family: "DM Sans", sans-serif;
 }
-.t-heading2{
-    font-family: "DM Sans", sans-serif;
+
+.t-heading2 {
     font-size: 14px;
     line-height: 26px;
     letter-spacing: 2px;
     color: #A1A1B0;
     text-align: center;
     padding-bottom: 14px;
-}   
+}
 
-/* *******************************responsive ************************************ */
-@media (min-width:576px) {
-    .col-sm-3 {
-        width: 25%;
-        padding-left: 12px;
-        padding-right: 12px;
-    }
+
+/* ===========================================Responsive code================================================ */
+
+.data {
+    overflow: auto;
+}
+
+.col-12 {
+    width: 100%;
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 
 @media (min-width:768px) {
-    .col-md-3{
-        width: 75%;
-        padding-left: 12px;
-        padding-right: 12px;
-    }
-    
-}
-@media (min-width:992px) {
-    .col-lg-7 {
-        width: 58.33%;
+    .col-md-5 {
+        width: 41.66%;
         padding-left: 12px;
         padding-right: 12px;
     }
 
+    .ml-md-auto {
+        margin-left: auto;
+    }
+}
+
+@media (min-width:768px) {
+    .col-md-7 {
+        width: 58.33%;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
 }
